--- a/style.css
+++ b/style.css
@@ -44,13 +44,30 @@ a {
 
 .main {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   justify-content: center;
   margin: 1rem;
 }
 
+h1,
+h2 {
+  font-size: 3rem;
+  margin: 1rem;
+  text-align: center;
+}
+
+#showDate {
+  text-align: right;
+  margin-right: 1.5rem;
+}
+
 .booksList {
+  margin: auto;
+  padding: 1rem;
+}
+
+.booksList__container {
   margin: auto;
   padding: 1rem;
 }
@@ -89,7 +106,7 @@ a {
 }
 
 .addBook {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -102,7 +119,7 @@ form {
   flex-direction: column;
   gap: 1rem;
   padding: 1rem 0;
-  margin: 1rem;
+  margin: 1rem auto;
 }
 
 label {
@@ -125,4 +142,30 @@ input[type="submit"] {
   height: 2px;
   background-color: black;
   margin: 1rem auto;
+}
+
+.contact {
+  display: none;
+}
+
+.contact__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.contact__container ul {
+  margin-top: 1rem;
+  padding-left: 3rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border: 2px solid black;
+  margin: 1rem;
 }
